// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render expenses summary with many expenses 1`] = `
<div>
  <h1>
    Viewing 
    22
     
    expenses
     totalling 
    $235,123.11
  </h1>
</div>
`;

exports[`Should correctly render expenses summary with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;
